    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <!-- This section is for the Title of the Activity (displays: Create New Item) -->
    
		    <TextView
		        android:id="@+id/title_activity_create_item_edit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/edit_item_text"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/orange"
		        android:textSize="30sp" />
		    
		   <!-- This section is for the Item Title (title) and Item Title (text field) -->    
		    
		    <TextView
		        android:id="@+id/item_title_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="25dp"
		        android:text="@string/item_title"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/orange" />
		
		    <EditText
		        android:id="@+id/item_title_input_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textPersonName"
		        android:textColor="@color/white" >
		    </EditText>
		    
		    <!-- This section is for the Item Category (title) and Item Category (input) -->

		    <TextView
		        android:id="@+id/item_category_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/create_item_category"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/orange" />
		    
		    <Spinner
		        android:id="@+id/item_category_input_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:prompt="@string/create_item_category_list"
		        android:entries="@array/create_item_array_categories"
		        android:textColor="@color/orange" />
		    
		
		    <!-- This section is for the Item Reward (title) and Item Reward (text field) -->
		    
		    <TextView
		        android:id="@+id/item_reward_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/item_reward"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/orange" />
		    
		  	<EditText
		        android:id="@+id/item_reward_input_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textPersonName" 
		        android:textColor="@color/white" >
		    </EditText>
		    
		  	<!-- This section is for the Item Location (title) and Item Location (text field) -->
		  	
     	
		  	
		  	<TextView
		        android:id="@+id/item_location_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/item_location"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/orange" />
		
         	<LinearLayout
         		android:layout_width="fill_parent"
         		android:layout_height="wrap_content"
         		android:layout_margin="1dp"
         		android:orientation="vertical" 
         		android:background="@color/gray" >
		  	
		    <EditText
		        android:id="@+id/item_city_input_edit"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:inputType="textPersonName"
		        android:hint="@string/hint_city"
             	android:textColor="@color/light_light_gray" />
		    
		    <EditText
		        android:id="@+id/item_state_input_edit"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:inputType="textPersonName"
		    	android:hint="@string/hint_state"
             	android:textColor="@color/light_light_gray" />
		    
		    </LinearLayout>
		  
		    <!-- This section is for the Radio Buttons (found) and (lost) -->
		    
		    <RadioGroup
		        android:id="@+id/radioGroup1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"  >
		        
			    <RadioButton
			        android:id="@+id/button_item_found_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/item_found"
			        android:textColor="@color/black" />
			
			    <RadioButton
			        android:id="@+id/button_item_lost_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/item_lost"
			        android:textColor="@color/black" />
		    
		    </RadioGroup>
		
		    <!-- This section is for the Item Description (title) and Item Description (text field) -->
		
			<TextView
		        android:id="@+id/item_description_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/item_description"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/orange" />
		
		    <EditText
		        android:id="@+id/item_description_input_edit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textMultiLine"
		        android:textColor="@color/white" />
		    
		    <!-- This section is for the Resolved status of the item (title and button group) -->
		    
		    <RadioGroup
		        android:id="@+id/radioGroup2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"  >
		        
			    <RadioButton
			        android:id="@+id/button_item_resolved_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/resolved"
			        android:textColor="@color/black" />
			
			    <RadioButton
			        android:id="@+id/button_item_unresolved_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/not_resolved"
			        android:textColor="@color/black" />
		    
		    </RadioGroup>
		
		    <!-- This section is for the button (displays: Create Item) -->
		
		    <Button
		        android:id="@+id/button_edit_item_edit"
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="18dp"
		        android:layout_gravity="center"
		        android:background="@color/orange"
		        android:text="@string/edit"
		        android:textSize="20sp" />
		    
		    <!--  This section is for the cancel button (Displays: Cancel) -->
		    
		    <Button
		        android:id="@+id/button_cancel_create_edit"
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="18dp"
		        android:layout_gravity="center"
		        android:background="@color/orange"
		        android:text="@string/cancel"
		        android:textSize="20sp" />
            
        </LinearLayout>
</ScrollView>