
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity"
    tools:ignore="Overdraw" >
    
    <TextView
        android:id="@+id/usrLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usr"
        android:textColor="@color/orange"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    
    <EditText
        android:id="@+id/reg_usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/light_light_gray" >

        <requestFocus />
    </EditText>
	
	<TextView
        android:id="@+id/passLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textColor="@color/orange"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<TextView
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
	
    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/light_light_gray"/>
    
    <TextView
        android:id="@+id/phonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phon"
        android:textColor="@color/orange"
       android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<TextView
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

	<EditText
	    android:id="@+id/reg_phon"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="phone"
	    android:textColor="@color/light_light_gray"/>
	
	<TextView
        android:id="@+id/space4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/reg_toreg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reg"
        android:textSize="20sp"
        android:background="@color/orange"
        android:textColor="@color/black" />
    

</LinearLayout>